test(app): unit tests